--- a/learn-haskell.cabal
+++ b/learn-haskell.cabal
@@ -5,16 +5,20 @@ name:                learn-haskell
 version:             0.1.0.0
 -- synopsis:            
 -- description:         
-license:             MIT
+-- license:             
 license-file:        LICENSE
 author:              Mitch LeBlanc
 maintainer:          supermitch@gmail.com
 -- copyright:           
 -- category:            
 build-type:          Simple
-cabal-version:       >=1.8
+extra-source-files:  README.md
+cabal-version:       >=1.10
 
 library
-  exposed-modules:     RoundToEven, Take, AlgebraicVector, AltCustomer, BadIndent, BadPattern, BadTree, BogusPattern, BookStore, Bool, Braces, Distinctions, Exercises, GlobalVariable, GoodIndent, Guard, Indentation, Lending, ListADT, LocalFunction, MySecond, NestedLets, Nullable, Roygbiv, ShapeUnion, Tree, Tuple, Adler32, EfficientList, Exercises, Filter, FirstWords, FixLines, Fold, IntParse, Map, Plus, SplitLines, Sum, Transpose, EightQueens
+  exposed-modules:     RoundToEven, Take, AlgebraicVector, AltCustomer, BadIndent, BadPattern, BadTree, BogusPattern, BookStore, Bool, Braces, Distinctions, Exercises, GlobalVariable, GoodIndent, Guard, Indentation, Lending, ListADT, LocalFunction, MySecond, NestedLets, Nullable, Roygbiv, ShapeUnion, Tree, Tuple, Adler32, EfficientList, ExercisesCh04, Filter, FirstWords, FixLines, Fold, IntParse, Map, Plus, SplitLines, Sum, Transpose, EightQueens
   -- other-modules:       
-  build-depends:       base ==4.6.*, HUnit ==1.2.*
+  -- other-extensions:    
+  build-depends:       base >=4.6 && <4.7, HUnit >=1.2 && <1.3
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
