--- a/learn-haskell.cabal
+++ b/learn-haskell.cabal
@@ -22,3 +22,16 @@ library
   build-depends:       base >=4.6 && <4.7, HUnit >=1.2 && <1.3
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+test-suite spec
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall
+  hs-source-dirs:
+      test
+  main-is:
+      Spec.hs
+  build-depends:
+      base    == 4.*
+    , hspec   == 2.*
